--- a/assets/css/renderjson.css
+++ b/assets/css/renderjson.css
@@ -44,7 +44,7 @@
 }
 
 .renderjson .object.syntax {
-  color: #fa6400;
+  color: #ff7518;
 }
 
 .renderjson .array.syntax {
